# SewerTris

./: .gitignore  CITATION.cff  LICENSE  README.md  environment_sewertris.yml  pyproject.toml
Examples/: Full_SewerTris_02.ipynb  Full_SewerTris_03.ipynb  Full_SewerTris_04.ipynb  My_first_SewerTris_01.ipynb  example_01_my_first_sewertris.ipynb  example_01_my_first_sewertris_project.ipynb  example_02_Stillwater_sewertris.ipynb  example_02_Stillwater_sewertris_project.ipynb  example_03_Stillwater_4tetromino_sewertris_project.ipynb  example_04_Stillwater_GWI_RDII_heterogeneity_sewertris_project.ipynb  example_05A_Stillwater_prepare_ensemble_siblings.ipynb  example_05B_Stillwater_run_ensemble_simulations.ipynb  example_05C_Stillwater_compare_ensemble_outputs.ipynb  example_siblings_types.ipynb
Examples/input/: domain_mask.dbf  domain_mask.shp  domain_mask.shx
Functions/: sewertris_fn_0_1.py  sewertris_plots_0_1.py  sewertris_swmm_0_1.py
docs/: SewerTris_repository_documentation.ipynb
src/sewertris/: __init__.py  _deps.py  config.py  design.py  domain.py  ensemble.py  hydrology.py  io.py  layout.py  plots.py  project.py  roads.py  sewer_network.py  swmm.py  topography.py
tests/: SewerTris_Test_Suite.ipynb  conftest.py  run_parallel_swmm.py  swmm_worker.py  test_end_to_end.py  test_package_api.py  test_pipeline_steps.py  test_sewer_overflows.py
