[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sewertris"
version = "1.0.0"
description = "Synthetic urban sanitary sewer system generator and EPA-SWMM benchmarking framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kevin Blanco" },
  { name = "Gabriel Perez" }
]
keywords = [
  "sanitary sewer",
  "inflow and infiltration",
  "I&I",
  "EPA-SWMM",
  "PySWMM",
  "urban hydrology",
  "synthetic data",
  "procedural generation",
  "wastewater infrastructure",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
  "geopandas",
  "matplotlib",
  "netcdf4",
  "networkx",
  "numpy",
  "osmnx",
  "pandas",
  "pillow",
  "pyproj",
  "pyswmm",
  "rasterio",
  "rasterstats",
  "scikit-image",
  "scipy",
  "shapely",
  "xarray"
]

[project.urls]
Repository = "https://github.com/Perez-HydroSystems/sewertris"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: runs a real EPA-SWMM simulation (deselect with '-m \"not slow\"')",
]
